--- a/themes/jtherczeg-grill-child/partials/socials.htm
+++ b/themes/jtherczeg-grill-child/partials/socials.htm
@@ -1,6 +1,8 @@
+[viewBag]
+==
 <div class="top-footer">
     <div class="row">
-        <div class="col-md-9">
+        <div class="col-md-8">
             <div class="subscribe-form">
                 <span>Get in touch with us</span>
                     <form role="form" method="get" class="subscribeForm">
@@ -9,7 +11,7 @@
                     </form>
             </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
             <div class="social-bottom">
                 <span>Follow us:</span>
                     <ul>
