--- a/themes/jtherczeg-grill-child/assets/css/templatemo_style.css
+++ b/themes/jtherczeg-grill-child/assets/css/templatemo_style.css
@@ -41,7 +41,7 @@ p {
   color: #333;
   font-weight: 700;
   text-transform: uppercase;
-}
+}javascript:;
 
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
@@ -815,17 +815,19 @@ textarea {
   text-align: center;
   position: absolute;
   width: 100%;
-  margin-top: 160px;
+  height:100%;
+  padding-top: 160px;
   color: #fff;
   font-family: 'Open Sans', sans-serif;
+  background-color: #00000040;
 }
 
 .slider-caption h1 {
-  text-shadow: 1px 1px #777;
+  text-shadow: 1px 1px #313131;
   font-size: 48px;
   padding-bottom: 10px;
   font-weight: 500;
-  color: #3c763d;
+  color: black;
   text-transform: uppercase;
 }
 
@@ -1355,3 +1357,12 @@ footer {
 }
 
 /*--- END RESPONSIVE ---*/
+
+.check
+{
+    opacity:0.5;
+	color:#996;
+	
+}
+.bookings h3, .bookings div{
+    margin-top:20px}
