--- a/themes/jtherczeg-grill-child/partials/about/intro.htm
+++ b/themes/jtherczeg-grill-child/partials/about/intro.htm
@@ -1,4 +1,6 @@
-    <div class="container">
+[viewBag]
+==
+<div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="heading-section">
@@ -29,8 +31,8 @@
                     </div>
                     <div class="overlay">
                         <div class="timeline-caption">
-                            <a href="#"><h4>Breakfast</h4></a>
-                            <p>8:00 AM</p>
+                            <a href="#"><h4>Breathe</h4></a>
+                    
                         </div>
                     </div>
                 </div>
@@ -42,8 +44,8 @@
                     </div>
                     <div class="overlay">
                         <div class="timeline-caption">
-                            <a href="#"><h4>Lunch</h4></a>
-                            <p>11:00 AM</p>
+                            <a href="#"><h4>Relax</h4></a>
+                            
                         </div>
                     </div>
                 </div>
@@ -55,8 +57,8 @@
                     </div>
                     <div class="overlay">
                         <div class="timeline-caption">
-                            <a href="#"><h4>Lunch</h4></a>
-                            <p>2:00 PM</p>
+                            <a href="#"><h4>Wander</h4></a>
+                            
                         </div>
                     </div>
                 </div>
@@ -68,8 +70,8 @@
                     </div>
                     <div class="overlay">
                         <div class="timeline-caption">
-                            <a href="#"><h4>Dinner</h4></a>
-                            <p>7:00 PM</p>
+                            <a href="#"><h4>Touch</h4></a>
+                            
                         </div>
                     </div>
                 </div>
@@ -81,8 +83,8 @@
                     </div>
                     <div class="overlay">
                         <div class="timeline-caption">
-                            <a href="#"><h4>Dinner</h4></a>
-                            <p>8:00 PM</p>
+                            <a href="#"><h4>Listen</h4></a>
+                           
                         </div>
                     </div>
                 </div>
@@ -94,8 +96,8 @@
                     </div>
                     <div class="overlay">
                         <div class="timeline-caption">
-                            <a href="#"><h4>Dinner</h4></a>
-                            <p>9:00 PM</p>
+                            <a href="#"><h4>Heal</h4></a>
+                            
                         </div>
                     </div>
                 </div>
