--- a/themes/jtherczeg-grill-child/partials/footer.htm
+++ b/themes/jtherczeg-grill-child/partials/footer.htm
@@ -1,3 +1,5 @@
+[viewBag]
+==
 <div class="bottom-footer">
-    <p>Copyright &copy; 2084 <a href="#">Your Company Name</a> | Design: <a href="http://www.templatemo.com" title="free templates">templatemo</a> | Powered by <a href="http://octobercms.com/">OctoberCMS</a></p>
+    <p>Copyright &copy; 2084 <a href="#">Your Company Name</a></p>
 </div>
