--- a/themes/jtherczeg-grill-child/partials/meta.htm
+++ b/themes/jtherczeg-grill-child/partials/meta.htm
@@ -1,3 +1,5 @@
+[viewBag]
+==
 <head>
 <meta charset="utf-8">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -6,7 +8,7 @@
 <meta name="author" content="{{ this.page.meta_author }}">
 <meta name="viewport" content="width=device-width">
 <title>{{ this.page.title }} - {{ this.theme.site_name }}</title>
-        
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker3.min.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
 {% styles %}
@@ -18,4 +20,4 @@
             'assets/css/flexslider.css',
             'assets/css/testimonails-slider',
 		]|theme }}" rel="stylesheet">
-</head>			
+</head>
