--- a/themes/jtherczeg-grill-child/partials/about/team.htm
+++ b/themes/jtherczeg-grill-child/partials/about/team.htm
@@ -1,4 +1,6 @@
-    <div class="container">
+[viewBag]
+==
+<div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="heading-section">
@@ -12,7 +14,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="team-thumb">
                         <div class="author">
-                            <img src="{{ 'assets/images/author1.jpg'|theme }}" alt="Tracy - templatemo">
+                            <img src="{{ 'assets/images/author1.png'|theme }}" alt="Mark - templatemo">
                         </div>
                         <div class="overlay">
                             <div class="author-caption">
@@ -25,14 +27,14 @@
                         </div>
                     </div>
                     <div class="author-details">
-                        <h2>Tracy</h2>
+                        <h2>Mark</h2>
                         <span>Designer</span>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="team-thumb">
                         <div class="author">
-                            <img src="{{ 'assets/images/author2.jpg'|theme }}" alt="Mary - templatemo">
+                            <img src="{{ 'assets/images/author2.png'|theme }}" alt="Mary - templatemo">
                         </div>
                         <div class="overlay">
                             <div class="author-caption">
@@ -52,7 +54,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="team-thumb">
                         <div class="author">
-                            <img src="{{ 'assets/images/author3.jpg'|theme }}" alt="Julia - templatemo">
+                            <img src="{{ 'assets/images/author3.png'|theme }}" alt="Pat - templatemo">
                         </div>
                         <div class="overlay">
                             <div class="author-caption">
@@ -65,14 +67,14 @@
                         </div>
                     </div>
                     <div class="author-details">
-                        <h2>Julia</h2>
+                        <h2>Pat</h2>
                         <span>Director</span>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="team-thumb">
                         <div class="author">
-                            <img src="{{ 'assets/images/author4.jpg'|theme }}" alt="Linda - templatemo">
+                            <img src="{{ 'assets/images/author4.png'|theme }}" alt="James - templatemo">
                         </div>
                         <div class="overlay">
                             <div class="author-caption">
@@ -85,7 +87,7 @@
                         </div>
                     </div>
                     <div class="author-details">
-                        <h2>Linda</h2>
+                        <h2>James</h2>
                         <span>Manager</span>
                     </div>
                 </div>
