--- a/themes/jtherczeg-grill-child/layouts/book-now.htm
+++ b/themes/jtherczeg-grill-child/layouts/book-now.htm
@@ -26,8 +26,9 @@
 <!-- Scripts -->
 <script src="{{ 'assets/vendor/modernizr-2.6.1-respond-1.1.0.min.js'|theme }}"></script>
 <script src="{{ 'assets/vendor/jquery-1.11.0.min.js'|theme }}"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="{{ 'assets/vendor/jquery.gmap3.min.js'|theme }}"></script>
-<script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.min.js"></script>
+<!-- <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.min.js"></script> -->
 <script src="{{ 'assets/js/plugins.js'|theme }}"></script>
 <script src="{{ 'assets/js/main.js'|theme }}"></script>
 {% framework extras %}
