--- a/themes/jtherczeg-grill-child/partials/meta.htm
+++ b/themes/jtherczeg-grill-child/partials/meta.htm
@@ -8,7 +8,8 @@
 <meta name="author" content="{{ this.page.meta_author }}">
 <meta name="viewport" content="width=device-width">
 <title>{{ this.page.title }} - {{ this.theme.site_name }}</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker3.min.css">
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker3.min.css"> -->
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
 {% styles %}
