--- a/themes/jtherczeg-grill-child/partials/slider.htm
+++ b/themes/jtherczeg-grill-child/partials/slider.htm
@@ -7,7 +7,7 @@
                 <h1>A walk in the park</h1>
                 <p>Donec justo dui, semper vitae aliquam euzali, ornare pretium enim. Maecenas molestie diam
                 <br><br>eget tellus luctus fermentum.</p>
-                <a href="{{ 'samples/single-post'|page }}">Book Now</a>
+                <a href="{{ 'book-now'|page }}">Book Now</a>
             </div>
         <img src="{{ 'assets/images/bg01.jpg'|theme }}" alt="" />
         <div class="slider-faded"></div>
